--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-OK
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Earthquake Markers</title>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+    <link rel="stylesheet" type="text/css" href="./style.css" />
+    <script src="./index.js"></script>
+  </head>
+  <body>
+    <div id="map"></div>
+
+    <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAKOGwSrdX-z-Zju8GqqTfiJ_SHyHLUznE&callback=initMap&v=weekly"
+      async
+    ></script>
+  </body>
+</html>
